Add FREETUBE_VERSION build-arg

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -21,7 +21,10 @@ RUN apt-get update \
     && apt-get purge -y && apt-get autoremove -y && apt-get autoclean -y \
     && rm -rf /var/lib/apt/lists/*
 
-RUN wget --output-document=freetube.tar.xz https://github.com/FreeTubeApp/FreeTube/releases/download/v0.7.3-beta/FreeTube-0.7.3-linux.tar.xz \
+ARG FREETUBE_VERSION
+ARG FREETUBE_DOWNLOAD_URL=https://github.com/FreeTubeApp/FreeTube/releases/download/v${FREETUBE_VERSION}-beta/FreeTube-${FREETUBE_VERSION}-linux.tar.xz
+
+RUN wget --output-document=freetube.tar.xz ${FREETUBE_DOWNLOAD_URL} \
     && mkdir --parents /usr/src/freetube \
     && tar -xf freetube.tar.xz --directory=/usr/src/freetube --strip-components=1 \
     && rm -fr freetube.tar.xz
@@ -30,6 +33,6 @@ ENTRYPOINT ["/bin/bash", "-c"]
 
 CMD ["bash"]
 
-# docker builder build --no-cache --build-arg IMAGE=debian --build-arg IMAGE_VERSION=stable-slim --file Dockerfile.debian . --tag freetube:latest
+# docker builder build --no-cache --build-arg IMAGE=debian --build-arg IMAGE_VERSION=stable-slim --build-arg FREETUBE_VERSION=0.7.3 --file Dockerfile.debian . --tag freetube:latest
 # xhost +local:docker
 # docker container run -it --volume /tmp/.X11-unix:/tmp/.X11-unix --volume /dev/shm:/dev/shm --device /dev/snd --device /dev/dri --env DISPLAY=unix$DISPLAY --name freetube freetube:latest
